gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-register_tool.rs
#![register_tool(tool)] // { dg-error ".E0658." "" { target *-*-* } }

fn main() {}

